--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,42 @@
-version: "3.1"
+version: "3.7"
 services:
-  public:
-    build: .
+  nginx:
+    image: nginx:1.17.3
+    container_name: nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./public:/var/www/html/
+      - ".:/var/www/html/"
+      - "./webserver/nginx.conf:/etc/nginx/nginx.conf"
     links:
-      - db
-    networks:
-      - default
-  db:
-    image: mysql:8.0
+      - php
+  php:
+    build:
+      context: .
+    image: phpdocker
+    container_name: php
     ports:
-      - "3306:3306"
-    command: --default-authentication-plugin=mysql_native_password
-    environment:
-      MYSQL_DATABASE: myDb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: user
-      MYSQL_ROOT_PASSWORD: test
+      - "9000:9000"
     volumes:
-      - ./dump:/docker-entrypoint-initdb.d
-      - ./conf:/etc/mysql/conf.d
-      - persistent:/var/lib/mysql
-    networks:
-      - default
+      - ".:/var/www/html/"
+    links:
+      - mysql
+  mysql:
+    image: mysql
+    container_name: mysql
+    ports:
+      - "33061:3306"
+    volumes:
+      - mysql:/var/lib/mysql/
+    environment:
+      MYSQL_DATABASE: 'db_proj'
+      MYSQL_ROOT_PASSWORD: '12345'
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
     links:
-      - db:db
+      - mysql:mysql
     ports:
       - "8001:80"
     environment:
@@ -37,4 +44,4 @@ services:
       MYSQL_PASSWORD: user
       MYSQL_ROOT_PASSWORD: test
 volumes:
-  persistent:
+  mysql:
