--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,12 @@
 		"psr-4": {
 			"Src\\": "src/"
 		}
-	}
+	},
+	"require": {
+		"william-costa/dot-env": "^0.1.0",
+		"william-costa/database-manager": "^0.1.0"
+	},
+	"require-dev": {
+	        "squizlabs/php_codesniffer": "3.*"
+	    }
 }
