--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
-	"name":"landing",
-	"autoload": {
-		"psr-4": {
-			"Src\\": "src/"
-		}
-	},
-	"require": {
-		"william-costa/dot-env": "^0.1.0",
-		"william-costa/database-manager": "^0.1.0",
-      	"ext-pdo": "*"
-    },
-	"require-dev": {
-	        "squizlabs/php_codesniffer": "3.*"
-	    }
+  "name": "landing",
+  "autoload": {
+    "psr-4": {
+      "Src\\": "src/"
+    }
+  },
+  "require": {
+    "william-costa/dot-env": "^0.1.0",
+    "william-costa/database-manager": "^0.1.0",
+    "ext-pdo": "*",
+    "ext-json": "*"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "3.*"
+  }
 }
